--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   webview_flutter: ^3.0.4
   path_provider_ex: ^1.0.1
   camera: ^0.10.0+3
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
