--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.0.15
   web_socket_channel: ^2.2.0
   gesture_zoom_box: ^0.0.4
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
