--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   sqflite: ^2.2.0+3
   path: ^1.8.2
   teledart: ^0.3.4
+  customprompt: ^0.2.7+5
+  top_snackbar_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
@@ -74,7 +76,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "lib/assets/image/143215.jpg"
+  image_path: "lib/assets/image/segurologo.jpg"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
