--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   teledart: ^0.3.4
   customprompt: ^0.2.7+5
   top_snackbar_flutter: ^3.0.0
+  video_player: ^2.4.9
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
